# ngi_secoge_challenge

./: .gitignore  README.md  RELATÓRIO.md  compose_postgres_original.txt  docker-compose.yml  dockerfile  explicação docker file.txt  leiame.txt  pyproject.toml  readme.md .txt  requirements.txt
dags/: descricao_diretorio_dags.txt  direto_etl_dados_influd2024.py  etl_completa_influd2024.py  etl_dados_influd2024.py  etl_dados_influd2024.txt
data/: Dicionário dos headers nescessários.txt  Info_adicionais.txt  descricao_diretorio_data.txt  headers_nescessários  setup.sql  transformado_INFLUD24-20-01-2025.csv
db/: obitos_f_ou_m.py  obitos_f_ou_m.sql  obitos_menos_12_vacinad.sql  obitos_vacina.sql  teste_conexao.py
help/: desafio técnico bgi secoge Eng de dados Jr.txt  docker-compose (1).txt  help_poetry.txt
ignore/: escopo_do_projeto.txt  ferramentas_utilizadas.txt
scripts/: Extracao.py  airflow_entrypoints.sh  extracao.py  main.py  transformar_dados.ipynb  transformar_dados.py  transformar_salvar.py  wait-for-it.sh
src/: transformar_dados.ipynb
