[project]
name = "ngi-secoge-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "alexsouza2",email = "alex.souza@indicium.tech"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
